<resources>
    <string name="app_name" translatable="false">Appdopta</string>
    <string name="app_group" translatable="false">APPDOPTA ORIGINALS</string>
    <string name="setting">Settings</string>

    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="rePass">Repeat Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="adoptarAnimal">Adopt</string>
    <string name="welcome">Welcome</string>
    <string name="editarAnimal">Edit Pet</string>
    <string name="borrarAnimal">Delete Pet</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="alrAcc">Already have an account?</string>
    <string name="regSucc">Successfully registered user</string>
    <string name="lang">Language</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>
    <string name="userInfo">User information</string>
    <string name="changeName">Change user name</string>
    <string name="changePass">Change password</string>
    <string name="catchphrase">🐾 Find your perfect pet 🐾</string>
    <string name="search">Search</string>
    <string name="adoptionPets">Pets for adoption</string>
    <string name="viewPets">View your pets</string>
    <string name="updatedEmail">Email successfully updated</string>
    <string name="updatedPhone">Phone successfully updated</string>
    <string name="updatedUser">User name successfully updated</string>
    <string name="updatedPass">Password successfully updated</string>
    <string name="addPets">Add a pet</string>
    <string name="currUser">Current username</string>
    <string name="newUser">New username</string>
    <string name="reNewUser">Repeat new username</string>
    <string name="currPass">Current password</string>
    <string name="newPass">New password</string>
    <string name="reNewPass">Repeat new password</string>
    <string name="Filter">FILTERS</string>
    <string name="clnFilter">Clean filters</string>
    <string name="applyFilter">Apply filters</string>
    <string name="selected">You have selected</string>
    <string name="breed">Breed</string>
    <string name="local">Location</string>
    <string name="species">Species</string>
    <string name="sex">Sex</string>
    <string name="birth">Birthdate</string>
    <string name="desc">Description</string>
    <string name="chip" translatable="false">Microchip</string>
    <string name="map">Map</string>
    <string name="ownInfo">Owner information</string>
    <string name="petData">Pet information</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="image">Image</string>
    <string name="chipLoc">Microchip Location</string>
    <string name="chipDate">Implantation date</string>
    <string name="questionDesc">Do you want to add a description?</string>
    <string name="rabies">Rabies</string>
    <string name="hepa">Hepatitis</string>
    <string name="leisma">Leishmaniases</string>
    <string name="confirm">Confirm</string>
    <string name="adopt">Thanks for adopting!</string>



    <string name="slcAnimal">Select animal...</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="rabbit">Rabbit</string>
    <string name="parrot">Parrot</string>
    <string-array name="animal">
        <item>@string/dog</item>
        <item>@string/cat</item>
        <item>@string/rabbit</item>
        <item>@string/parrot</item>
    </string-array>

    <string name="slcBreed">Select breed...</string>
    <string name="Labrador" translatable="false">Labrador</string>
    <string name="DomesticShorthair" translatable="false">Domestic Shorthair</string>
    <string name="Beagle" translatable="false">Beagle</string>
    <string name="MiniLop" translatable="false">Mini Lop</string>
    <string-array name="breed">
        <item>@string/Labrador</item>
        <item>@string/DomesticShorthair</item>
        <item>@string/Beagle</item>
        <item>@string/MiniLop</item>
    </string-array>

    <string name="slcLoc">Select location...</string>
    <string name="Madrid" translatable="false">Madrid</string>
    <string name="Barcelona" translatable="false">Barcelona</string>
    <string name="Valencia" translatable="false">Valencia</string>
    <string name="Santander" translatable="false">Santander</string>
    <string-array name="location">
        <item>@string/Madrid</item>
        <item>@string/Barcelona</item>
        <item>@string/Valencia</item>
        <item>@string/Santander</item>
    </string-array>

    <!-- Error msg -->
    <string name="userNotFound">The user doesn\'t exists</string>
    <string name="fieldsNotCompleted">Fill all the fields</string>
    <string name="existingUser">The user already exists</string>
    <string name="diffUser">The usernames doesn\'t match</string>
    <string name="wrongCurrUser">Wrong current username</string>
    <string name="diffPass">The passwords doesn\'t match</string>
    <string name="wrongCurrPass">Wrong current password</string>
    <string name="tooBig">The imagen is too big</string>
    <string name="chipExist">The chip is already in the data base</string>
    <string name="cantAdopt">You can\'t adopt your own pet</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fr">French</string>
    <string name="chipNum">Chip Number</string>


</resources>