<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9E3AF"
    tools:context=".features.user.UserActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Filter"
        android:textColor="#1F3A20"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAnimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="272dp"
        android:layout_height="61dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="Seleccionar Ubicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRace" />

    <Spinner
        android:id="@+id/spinnerRace"
        android:layout_width="272dp"
        android:layout_height="61dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="Seleccionar raza"
        app:layout_constraintBottom_toTopOf="@+id/spinnerLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAnimal" />


    <Spinner
        android:id="@+id/spinnerAnimal"
        android:layout_width="272dp"
        android:layout_height="61dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="Seleccionar animal"
        app:layout_constraintBottom_toTopOf="@+id/spinnerRace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLocation"
        app:layout_constraintVertical_bias="0.76">

        <Button
            android:id="@+id/eraseSelectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:backgroundTint="#1F3A20"
            android:onClick="borrar"
            android:text="@string/clnFilter"
            android:textColor="#C9E3AF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/applySelectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#1F3A20"
            android:onClick="aplicar"
            android:paddingLeft="25dp"
            android:paddingRight="16dp"
            android:text="@string/applyFilter"
            android:textColor="#C9E3AF"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
